feat: избранные ассистенты пользователя
