# backend/internal/assistants/infra/http/v1/routes.go
@@ -12,4 +12,6 @@ func RegisterRoutes(
 	mux.Handle("POST /assistants", authMW(adminMW(http.HandlerFunc(h.Create))))
 	mux.Handle("GET /assistants/{assistantId}", authMW(http.HandlerFunc(h.GetByID)))
 	mux.Handle("PUT /assistants/{assistantId}", authMW(adminMW(http.HandlerFunc(h.Update))))
+	mux.Handle("PUT /assistants/{assistantId}/favorite", authMW(http.HandlerFunc(h.AddFavorite)))
+	mux.Handle("DELETE /assistants/{assistantId}/favorite", authMW(http.HandlerFunc(h.RemoveFavorite)))
 }
